[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["m <mcallara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.semantic_release]
# version_variable = "pyproject.toml:tool.poetry.version"

[tool.semantic_release]
version_variable = [
    "src_folder/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = false
build_command = "pip install poetry && poetry build"